[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/bullet/bullet.png" type="Texture" id=1]
[ext_resource path="res://src/actors/player/weapons/bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/GUI/crit.png" type="Texture" id=3]
[ext_resource path="res://src/actors/player/weapons/crit.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/interactables/glowingletters.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/particles/circling_part.tscn" type="PackedScene" id=6]
[ext_resource path="res://animated_texture_but_better.gd" type="Script" id=7]
[ext_resource path="res://assets/enemy/frozen head boss/stardust.png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/frozen head boss/starburst.png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/frozen head boss/starparticles.png" type="Texture" id=10]
[ext_resource path="res://assets/enemy/frozen head boss/star.png" type="Texture" id=11]

[sub_resource type="AnimatedTexture" id=12]
frames = 4
oneshot = true
fps = 40.0
frame_0/texture = ExtResource( 11 )
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 10 )
frame_3/delay_sec = 0.0
script = ExtResource( 7 )
sprites_dir = ""

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=9]
scale = 0.5
scale_random = 0.2

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.946428, 0.172253 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.928571, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
next_pass = SubResource( 9 )
trail_size_modifier = SubResource( 11 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 10 )
hue_variation = 0.2
hue_variation_random = 0.72

[node name="Bullet" type="Area2D" groups=["weapon"]]
scale = Vector2( 0.25, 0.25 )
collision_mask = 6
script = ExtResource( 2 )
critpar = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -20, -24, -32, -32, -40, -40, -40, -40, -20, -8, -4, -40, 36, -20, 40, -8, 12, 36, 40, 40, 20, 12, 0, 40, -32, 40, -40, 20, -40, 8, -28, 8, -16, 0, -16 )

[node name="circling_part" parent="." instance=ExtResource( 6 )]
scale = Vector2( 10, 10 )
atext = SubResource( 12 )

[node name="poo" parent="." instance=ExtResource( 5 )]
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
i = 9.0
maxe = 10.0
mine = 9.0
texture = ExtResource( 1 )
blending = "mix"

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.33
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
process_material = SubResource( 2 )

[node name="crit2" parent="." instance=ExtResource( 4 )]
visible = false

[node name="crit" type="Particles2D" parent="."]
visible = false
z_index = 2
process_material = SubResource( 8 )
texture = ExtResource( 3 )
normal_map = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
z_index = -1

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
